--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -6,9 +6,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/tic-tac-toe.css">
+  <link rel="stylesheet" href="tic-tac-toe.css">
   <title>Tic-Tac-Toe-game</title>
-  <link rel="icon" href="images/tick-tac-toe-icon.png">
+  <link rel="icon" href="tick-tac-toe-icon.png">
 </head>
 <body >
   
@@ -49,6 +49,6 @@
  
 
  
-  <script src="scripts/tic-tac-toe.js"></script> 
+  <script src="tic-tac-toe.js"></script> 
 </body>
 </html>
