--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="tic-tac-toe.css">
   <title>Tic-Tac-Toe-game</title>
-  <link rel="icon" href="tick-tac-toe-icon.png">
+  <link rel="icon" href="images/tick-tac-toe-icon.png">
 </head>
 <body >
   
